Update project to gradle 7.6, kotlin 1.9 and JDK 17