@@ -1,33 +1,56 @@
-import static org.gradle.api.JavaVersion.VERSION_1_8
+import static org.gradle.api.JavaVersion.VERSION_11
 
 buildscript {
     ext {
         corda_release_group = 'net.corda'
-        corda_release_version = '4.10'
-        tokens_release_group = getProperty("group")
-        tokens_release_version = getProperty("version")
-        tokens_release_suffix= "$versionSuffix"
-        corda_gradle_plugins_version = '5.0.12'
-        kotlin_version = '1.2.71'
+        corda_release_version = '4.12-202309-01'
+        confidential_id_release_group = "com.r3.corda.lib.ci"
+        confidential_id_release_version = "1.2-202309-01"
+
+        corda_gradle_plugins_version = '5.1.1'
+        snappy_version = '0.4'
+        kotlin_version = '1.9.0'
         junit_version = '4.12'
         dokka_version = '0.9.17'
         slf4j_version = '1.7.25'
         log4j_version = '2.9.1'
         jackson_version = '2.9.0'
-        confidential_id_release_group = "com.r3.corda.lib.ci"
-        confidential_id_release_version = "1.0"
         aetherVersion = '1.0.0.v20140518'
         mavenVersion = '3.1.0'
         maven_resolver_version = "1.1.1"
+
+        test_module_opens = [
+            '--add-opens' , 'java.base/java.time=ALL-UNNAMED' , '--add-opens' , 'java.base/java.io=ALL-UNNAMED' ,
+            '--add-opens' , 'java.base/java.util=ALL-UNNAMED' , '--add-opens' , 'java.base/java.net=ALL-UNNAMED' ,
+            '--add-opens' , 'java.base/java.nio=ALL-UNNAMED' , '--add-opens' , 'java.base/java.lang.invoke=ALL-UNNAMED' ,
+            '--add-opens' , 'java.base/java.security.cert=ALL-UNNAMED' , '--add-opens' , 'java.base/java.security=ALL-UNNAMED' ,
+            '--add-opens' , 'java.base/javax.net.ssl=ALL-UNNAMED' , '--add-opens' , 'java.base/java.lang=ALL-UNNAMED' ,
+            '--add-opens' , 'java.base/java.util.concurrent=ALL-UNNAMED' , '--add-opens' , 'java.sql/java.sql=ALL-UNNAMED'
+        ]
+        test_module_exports = [
+            '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
     }
 
     repositories {
         jcenter()
         mavenCentral()
         mavenLocal()
+
         maven { url "${publicArtifactURL}/corda-releases" }
         maven { url "${publicArtifactURL}/corda-dependencies" }
         maven { url "https://repo.gradle.org/gradle/libs-releases-local/" }
+
+        maven {
+            url "${artifactoryContextUrl}/corda-dev"
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
     }
 
     dependencies {
@@ -37,49 +60,33 @@ buildscript {
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath "com.gradle:gradle-enterprise-gradle-plugin:$gradleEnterprisePlugin"
-        classpath "com.gradle:common-custom-user-data-gradle-plugin:$customUserDataGradlePlugin"
     }
 }
 
 plugins {
-    id "com.jfrog.artifactory" version "4.7.5"
+    id "org.ajoberstar.grgit" version "4.0.0"
+    id 'corda.root-publish'
 }
 
-apply plugin: "com.gradle.build-scan"
-apply plugin: "com.gradle.common-custom-user-data-gradle-plugin"
+// If the command line project option -PversionFromGit is added to the gradle invocation, we'll resolve
+// the latest git commit hash and timestamp and create a version postfix from that
+if (project.hasProperty("versionFromGit")) {
+    ext.versionSuffix = "202309-01"
+}
 
-buildScan {
-    server = gradleEnterpriseUrl
-    allowUntrustedServer = false
-    def apiKey = project.findProperty('CORDA_GRADLE_SCAN_KEY') ?: System.getenv('CORDA_GRADLE_SCAN_KEY')
-    if (apiKey?.trim()) {
-        publishAlways()
-        capture {
-            taskInputFiles = true
-        }
-        uploadInBackground = false
-        accessKey = apiKey
-    }
+if (ext.versionSuffix != "") {
+    ext.tokens_release_version = "${ext.baseVersion}-${ext.versionSuffix}".toString()
+} else {
+    ext.tokens_release_version = "${ext.baseVersion}".toString()
 }
 
 allprojects {
-    if (tokens_release_suffix.isEmpty()) {
-        version tokens_release_version
-    } else {
-        version "$tokens_release_version-$tokens_release_suffix"
-    }
-    group "$tokens_release_group"
+    version "$tokens_release_version"
 
     configurations.all {
         resolutionStrategy {
             // Force dependencies to use the same version of Kotlin
-            force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-            force "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
             force "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-
             cacheChangingModulesFor 0, 'seconds'
         }
     }
@@ -91,23 +98,47 @@ subprojects {
         mavenCentral()
         mavenLocal()
         maven { url 'https://jitpack.io' }
-        maven { url "${publicArtifactURL}/corda-dev" }
         maven { url "${publicArtifactURL}/corda-releases" }
         maven { url "${publicArtifactURL}/corda-lib" }
-        maven { url "${publicArtifactURL}/corda-lib-dev" }
-        maven { url "https://repo.gradle.org/gradle/libs-releases-local/" }
         maven { url "${publicArtifactURL}/corda-dependencies" }
+        maven { url "https://repo.gradle.org/gradle/libs-releases-local/" }
+
+        maven {
+            url "${artifactoryContextUrl}/corda-dev"
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
+        maven {
+            url "${artifactoryContextUrl}/corda-lib-dev"
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
     }
 
-    apply plugin: 'kotlin'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
         kotlinOptions {
-            languageVersion = "1.2"
-            apiVersion = "1.2"
-            jvmTarget = VERSION_1_8
+            languageVersion = "1.8"
+            apiVersion = "1.8"
+            jvmTarget = VERSION_11
             javaParameters = true   // Useful for reflection.
         }
+    }
+
+    java {
+        sourceCompatibility = "11"
+        targetCompatibility = "11"
     }
 
     tasks.withType(Jar) {
@@ -125,24 +156,22 @@ subprojects {
 // Don't publish an empty "modules" JAR.
 def publishProjects = [
         project(":contracts"),
-        project(":workflows")
+        project(":workflows"),
+        project(":modules:contracts-for-testing")
 ]
 
 configure(publishProjects) { Project subproject ->
-    apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.artifactory'
+    apply plugin: 'corda.common-publishing'
 
     task sourceJar(type: Jar, dependsOn: subproject.classes) {
-        classifier = 'sources'
+        archiveClassifier = 'sources'
         from sourceSets.main.allSource
     }
 
     task javadocJar(type: Jar, dependsOn: subproject.javadoc) {
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
         from javadoc.destinationDir
     }
-
-    task install(dependsOn: 'publishToMavenLocal')
 
     publishing {
         publications {
@@ -181,27 +210,8 @@ configure(publishProjects) { Project subproject ->
     }
 }
 
-
-artifactory {
-    publish {
-        contextUrl = artifactoryContextUrl
-        repository {
-            repoKey = 'corda-lib'
-            username = System.getenv('CORDA_ARTIFACTORY_USERNAME') ?: System.getProperty('corda.artifactory.username')
-            password = System.getenv('CORDA_ARTIFACTORY_PASSWORD') ?: System.getProperty('corda.artifactory.password')
-        }
-
-        defaults {
-            if (publishProjects.contains(project)) {
-                publications(project.name)
-            }
-        }
-    }
-}
-
 wrapper {
-    gradleVersion = "5.6"
+    gradleVersion = "7.6"
     distributionType = Wrapper.DistributionType.ALL
 }
 
-//add for test re-run
